Create function that builds the cards with conditions to play game

--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     <title>Memory Game</title>
 </head>
 <body>
-    <div class="gridContainer">
-        <div class="gridbox"></div>
-        <div class="gridbox"></div>
-        <div class="gridbox"></div>
-        <div class="gridbox"></div>
+    <div class="cardContainer">
     </div>
 </body>
 </html>
