Add a header and text

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Memory Game</title>
 </head>
 <body>
+    <div class ="textContainer">
+        <h1 class="header">Memory Game</h1>
+        <p class="text">Uh... Good luck with the colors.</p>
+    </div>
     <div class="cardContainer">
     </div>
 </body>
